fix(mr): close up panel spacing (#772)

--- a/eds/blocks/mosaic-reveal/mosaic-reveal.css
+++ b/eds/blocks/mosaic-reveal/mosaic-reveal.css
@@ -134,7 +134,6 @@
 
 .mosaic-reveal .mosaic-reveal-content *:not(.category) {
   align-items: center;
-  block-size: 100%;
   opacity: 1;
   transform-origin: 50% 100%;
   transition: 0.5s ease;
